# color_operations

./: .gitignore  CMakeLists.txt
src/: brightness_operation.cpp  brightness_operation.hpp  color_operation.cpp  color_operation.hpp  color_operations.cpp  color_operations.hpp  main.cpp  matrix_operation.cpp  matrix_operation.hpp  operation.hpp  random_operation.cpp  random_operation.hpp
